# llama.cpp

common/: arg.cpp  common.h
conversion/: __init__.py  diffusion_gemma.py
examples/: CMakeLists.txt
examples/diffusion/: diffusion-cli.cpp  diffusion.cpp  diffusion.h
examples/diffusion-gemma-eval/: CMakeLists.txt  diffusion-gemma-eval.cpp
examples/diffusion-gemma-server/: CMakeLists.txt  diffusion-gemma-server.cpp  diffusion-gemma-visual-server.cpp
ggml/src/ggml-cuda/: diffusion-sampling.cu  diffusion-sampling.cuh  ggml-cuda.cu
gguf-py/gguf/: constants.py  gguf_writer.py
include/: llama.h
src/: llama-arch.cpp  llama-arch.h  llama-model.cpp  llama-model.h
src/models/: diffusion-gemma.cpp  gemma4-common.h  models.h
tests/: test-llama-archs.cpp
tools/mtmd/: mtmd-helper.cpp
